# Godel0

./: .gitignore  README.md  REFACTOR_EXECUTION_PLAN.md  godel0_bugfix_guide_thompson_repochain_apptainer_cn.md  godel0_repochain_hgm_style_refactor_plan_cn.md  pyproject.toml  setup.py
configs/: ansible_joint_epoch1_preflight.yaml  ansible_root_bootstrap_smoke.yaml  ansible_smoke.yaml  default.yaml  evolve20_ansible_formal.yaml  evolve20_ansible_pass1_existing10.yaml  evolve20_failure_seed.jsonl  evolve20_failure_seed_eval.json  evolve20_repo_chain.yaml  local_smoke.yaml
experiment_adapters/: common_agent_adapter.py  repo_bug_agent_adapter.py
initial_agent/: godel0_extension.manifest.json  solver_core.checksums.sha256  solver_core.lock.json
logs/: godel0_causal_contract_204189.out  godel0_causal_contract_204194.err  godel0_causal_contract_204194.out  godel0_debug_200016.out  godel0_evolve20_205858.err  godel0_evolve20_205858.out  godel0_evolve20_205874.err  godel0_evolve20_205874.out  godel0_evolve20_205926.err  godel0_evolve20_205926.out  godel0_evolve20_205950.out  godel0_evolve20_205955.err  godel0_evolve20_205955.out  godel0_evolve20_205958.err  godel0_evolve20_205958.out  godel0_evolve20_205969.err  godel0_evolve20_205969.out  godel0_evolve20_205972.err  godel0_evolve20_205972.out  godel0_evolve20_205980.err  godel0_evolve20_205980.out  godel0_evolve20_205993.out  godel0_evolve20_206920.err  godel0_evolve20_206920.out  godel0_evolve20_206921.err  godel0_evolve20_206921.out  godel0_evolve20_206924.out  godel0_evolve20_206925.err  godel0_evolve20_206925.out  (+90 more)
(+220 files in other folders)
