[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "godel0"
version = "0.4.0"
description = "Godel0: Self-improving coding agent with built-in Proposer and SWE-smith"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "openai>=1.0",
    "anthropic>=0.34",
    "backoff>=2.0",
    "GitPython>=3.1",
    "pathspec>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "async-timeout>=4.0",
]

[project.scripts]
godel0 = "godel0.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
godel0 = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
